--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -31,13 +31,15 @@
 
 <template name="ironTableNav">
     <div class="pull-left">
-        <strong>Displaying {{recordDisplayStart}} - {{recordDisplayStop}} of {{recordCount}} {{recordName}}</strong>
+        <strong>Displaying {{recordDisplayStart}} - {{recordDisplayStop}} out of {{recordCount}} {{recordName}}s</strong>
     </div>
     <div class="pull-right">
-        <a class="btn btn-default btn-sm {{previousPathClass}}" href="{{previousPath}}">
+        <a class="btn btn-default btn-sm {{previousPathClass}}" href="{{previousPath}}"
+            title="previous record set" rel='tooltip'>
             <i class="fa fa-chevron-left"></i>
         </a> 
-        <a class="btn btn-default btn-sm {{nextPathClass}}" href="{{nextPath}}">
+        <a class="btn btn-default btn-sm {{nextPathClass}}" href="{{nextPath}}"
+            title="next record set" rel='tooltip'>
             <i class="fa fa-chevron-right"></i>
         </a>
     </div>
@@ -45,7 +47,13 @@
 
 <template name="ironTableHeader">
     <th>
-        <a class="table-col-head">
+        <a class="table-col-head" href="?sort_on={{colName}}&sort_direction={{sortDirection}}"
+            {{#if sort}}
+                title="Reverse sort order"
+            {{else}}
+                title="Sort on {{capitalize colName}}"
+            {{/if}} 
+            rel='tooltip'>
             {{capitalize colName}} 
             {{#if sort}}<i class="fa fa-chevron-circle-{{#if desc}}down{{else}}up{{/if}}"></i>{{/if}}
         </a>
@@ -65,12 +73,12 @@
     {{/each}}
     <td class="controls">
         {{#if editOk}}
-            <a class="btn btn-link iron-table-edit-record">
+            <a class="btn btn-link iron-table-edit-record" title='Edit Record' rel='tooltip'>
                 <i class="fa fa-pencil-square-o"></i>
             </a>            
         {{/if}}
         {{#if deleteOk}}
-            <a class="btn btn-link iron-table-delete-record">
+            <a class="btn btn-link iron-table-delete-record" title='Delete Record' rel='tooltip'>
                 <i class="fa fa-trash-o"></i>
             </a>            
         {{/if}}
