--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -1,27 +1,27 @@
 
 <template name='ironTableForm'>
-  {{#doForm columns}}
-      <div class="control-group">
-        <label class="control-label" for="{{key}}">{{header}}</label>
-        <div class="controls">
-          {{#if col.static}}
-            <label class="uneditable-input">{{col.value}}</label>
+  {{#each columns}}
+      <div class="form-group">
+        <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
+        <div class="col-sm-10">
+          {{#if static}}
+            <label class="uneditable-input">{{value}}</label>
          {{else}}
-          <input type="{{col.displayType}}" id="{{key}}" name="{{key}}"
-          {{#if col.checkbox}} 
-            {{col.checked}}
-          {{else}}
-            {{#if col.value}}value="{{col.value}}"{{/if}}
-          {{/if}}
-          {{#if col.required}}required{{/if}}
-          {{#if col.autofocus}}autofocus='on'{{/if}}
-          {{#if col.placeholder}}placeholder='{{col.placeholder}}'{{/if}}
-          {{#if col.tooltip}}
-            title='{{col.tooltip}}' rel='tooltip' data-placement="right"
-          {{/if}}
-          >
+            <input type="{{displayType}}" class="form-control" id="{{key}}" name="{{key}}"
+            {{#if checkbox}} 
+              {{checked}}
+            {{else}}
+              {{#if value}}value="{{value}}"{{/if}}
+            {{/if}}
+            {{#if required}}required{{/if}}
+            {{#if autofocus}}autofocus='on'{{/if}}
+            {{#if placeholder}}placeholder='{{col.placeholder}}'{{/if}}
+            {{#if tooltip}}
+              title='{{tooltip}}' rel='tooltip' data-placement="right"
+            {{/if}}
+            >
           {{/if}}
         </div>
       </div>
-  {{/doForm}}
+  {{/each}}
 </template>
