--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -4,23 +4,20 @@
       <div class="form-group">
         <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
         <div class="col-sm-10">
-          {{#if static}}
-            <label class="uneditable-input">{{value}}</label>
-         {{else}}
             <input type="{{displayType}}" class="form-control" id="{{key}}" name="{{key}}"
-            {{#if checkbox}} 
-              {{checked}}
-            {{else}}
-              {{#if value}}value="{{value}}"{{/if}}
-            {{/if}}
-            {{#if required}}required{{/if}}
-            {{#if autofocus}}autofocus='on'{{/if}}
-            {{#if placeholder}}placeholder='{{col.placeholder}}'{{/if}}
-            {{#if tooltip}}
-              title='{{tooltip}}' rel='tooltip' data-placement="right"
-            {{/if}}
+              {{#if checkbox}} 
+                {{checked}}
+              {{else}}
+                {{#if value}}value="{{value}}"{{/if}}
+              {{/if}}
+              {{#if required}}required{{/if}}
+              {{#if autofocus}}autofocus='on'{{/if}}
+              {{#if placeholder}}placeholder='{{col.placeholder}}'{{/if}}
+              {{#if tooltip}}
+                title='{{tooltip}}' rel='tooltip' data-placement="right"
+              {{/if}}
+              {{#if static}}disabled{{/if}}
             >
-          {{/if}}
         </div>
       </div>
   {{/each}}
