sort on key in link

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -47,7 +47,7 @@
 
 <template name="ironTableHeader">
     <th>
-        <a class="table-col-head" href="?sort_on={{colName}}&sort_direction={{sortDirection}}"
+        <a class="table-col-head" href="?sort_on={{key}}&sort_direction={{sortDirection}}"
             {{#if sort}}
                 title="Reverse sort order"
             {{else}}
