--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -1,5 +1,12 @@
 <template name="ironTable">
     <div class="container iron-table-container">
+        {{#if goBackPath}}
+           <span class="back-button">
+                <a class="btn btn-link" href={{pathFor goBackPath}}>
+                    <i class="fa fa-chevron-circle-left fa-lg"></i>
+                </a>
+            </span>
+        {{/if}}
         <h3>{{tableTitle}}</h3>
 
         {{#if haveData}}
