--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -80,7 +80,7 @@
                 <a href="{{aLink}}" {{#if title}}title='{{title}}' rel='tooltip'{{/if}}>     {{value}}
                 </a>
             {{else}}
-                {{value}}
+                {{{value}}
             {{/if}}
         </td>
     {{/each}}
