--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -7,7 +7,17 @@
                 </a>
             </span>
         {{/if}}
+        
         <h3>{{tableTitle}}</h3>
+
+        {{#if newRecordPath}}
+            <span class="new-record">
+                <a class="btn btn-success btn-sm" title="{{newRecordPopup}}" rel='tooltip' data-placement="bottom"
+                    href="{{pathFor newRecordPath}}">
+                    {{newRecordTitle}} <i class="fa fa-plus-square fa-lg"></i> 
+                </a>
+            </span>
+        {{/if}}
 
         {{#if haveData}}
 
