--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -12,7 +12,7 @@
 
         {{#if newRecordPath}}
             <span class="new-record">
-                <a class="btn btn-success btn-sm" title="{{newRecordPopup}}" rel='tooltip' data-placement="bottom"
+                <a class="btn btn-success btn-sm" title="{{newRecordTooltip}}" rel='tooltip' data-placement="bottom"
                     href="{{pathFor newRecordPath}}">
                     {{newRecordTitle}} <i class="fa fa-plus-square fa-lg"></i> 
                 </a>
