fix checkbox issue in modal form

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -87,10 +87,10 @@
     {{#each colData}}
         <td class="{{column.class}}">
             {{#if aLink}}
-                <a href="{{aLink}}" {{#if title}}title='{{title}}' rel='tooltip'{{/if}}>     {{value}}
+                <a href="{{aLink}}" {{#if title}}title='{{title}}' rel='tooltip'{{/if}}>     {{{value}}}
                 </a>
             {{else}}
-                {{{value}}
+                {{{value}}}
             {{/if}}
         </td>
     {{/each}}
