--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -1,24 +1,28 @@
 
 <template name='ironTableForm'>
   {{#each columns}}
-      <div class="form-group">
-        <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
-        <div class="col-sm-10">
-            <input type="{{displayType}}" class="form-control" id="{{key}}" name="{{key}}"
-              {{#if checkbox}} 
-                {{checked}}
-              {{else}}
-                {{#if value}}value="{{value}}"{{/if}}
-              {{/if}}
-              {{#if required}}required{{/if}}
-              {{#if autofocus}}autofocus='on'{{/if}}
-              {{#if placeholder}}placeholder='{{col.placeholder}}'{{/if}}
-              {{#if tooltip}}
-                title='{{tooltip}}' rel='tooltip' data-placement="right"
-              {{/if}}
-              {{#if static}}disabled{{/if}}
-            >
-        </div>
-      </div>
+      {{> ironTableFormItem}}
   {{/each}}
+</template>
+
+<template name="ironTableFormItem">
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
+    <div class="col-sm-10">
+        <input type="{{displayType}}" class="form-control" name="{{key}}"
+          {{#if checkbox}} 
+            {{#if checked}}checked="checked"{{/if}}
+          {{else}}
+            {{#if value}}value="{{value}}"{{/if}}
+          {{/if}}
+          {{#if required}}required{{/if}}
+          {{#if autofocus}}autofocus='on'{{/if}}
+          {{#if placeholder}}placeholder='{{col.placeholder}}'{{/if}}
+          {{#if tooltip}}
+            title='{{tooltip}}' rel='tooltip' data-placement="right"
+          {{/if}}
+          {{#if static}}disabled{{/if}}
+        >
+    </div>
+  </div>
 </template>
