change default to no filter on col

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -69,11 +69,11 @@
                     <select class="form-control" id="filter-column">
                         <option value="_none_">No Filter</option>
                         {{#each headers}}
-                            {{#unless doNotFilterOn}}
+                            {{#if canFilterOn}}
                                 <option value="{{dataKey}}" {{#if filterOnThisCol}}selected{{/if}}>
                                     {{capitalize colName}}
                                 </option>
-                            {{/unless}}
+                            {{/if}}
                         {{/each}}
                     </select>
                 </div>
