move hide logic to template

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -35,7 +35,9 @@
                 <thead>
                     <tr>
                         {{#each headers}}
-                            {{> ironTableHeader}}
+                            {{#unless hide}}
+                                {{> ironTableHeader}}
+                            {{/unless}}
                         {{/each}}
                         <th class="controls-header">
 
