--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -72,7 +72,7 @@
                         <option value="_none_">No Filter</option>
                         {{#each headers}}
                             {{#if canFilterOn}}
-                                <option value="{{colName}}" {{#if filterOnThisCol}}selected{{/if}}>
+                                <option value="{{key}}" {{#if filterOnThisCol}}selected{{/if}}>
                                     {{capitalize colName}}
                                 </option>
                             {{/if}}
