add in hook for plural on record name

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -56,7 +56,7 @@
             </table>
 
         {{else}}
-            <div class="alert alert-warning">No {{capitalize recordName}}s !</div>
+            <div class="alert alert-warning">No {{capitalize recordsName}} !</div>
         {{/if}}
     
     </div>
@@ -94,7 +94,7 @@
 
 <template name="ironTableNav">
     <div class="pull-left">
-        <strong>Displaying {{recordDisplayStart}} - {{recordDisplayStop}} out of {{recordCount}} {{recordName}}s</strong>
+        <strong>Displaying {{recordDisplayStart}} - {{recordDisplayStop}} out of {{recordCount}} {{recordsName}}</strong>
     </div>
 
     <div class="pull-right">
