add extra controls

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -138,6 +138,7 @@
         </td>
     {{/each}}
     <td class="controls">
+        {{{ extraControls }}}
         {{#if editOk}}
             <a class="btn btn-link iron-table-edit-record" title='Edit Record' rel='tooltip'>
                 <i class="fa fa-pencil-square-o"></i>
