--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -10,18 +10,13 @@
     <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
     <div class="col-sm-10">
         <input type="{{displayType}}" class="form-control" name="{{key}}"
-          {{#if checkbox}} 
-            {{#if checked}}checked="checked"{{/if}}
-          {{else}}
-            {{#if value}}value="{{value}}"{{/if}}
-          {{/if}}
-          {{#if required}}required{{/if}}
-          {{#if autofocus}}autofocus='on'{{/if}}
-          {{#if placeholder}}placeholder='{{col.placeholder}}'{{/if}}
-          {{#if tooltip}}
-            title='{{tooltip}}' rel='tooltip' data-placement="right"
-          {{/if}}
-          {{#if static}}disabled{{/if}}
+          checked="{{checked}}"
+          value="{{value}}"
+          required={{required}}
+          autofocus={{autofocus}}
+          placeholder='{{col.placeholder}}'
+          title='{{tooltip}}' rel='tooltip' data-placement="right"
+          disabled={{disabled}}
         >
     </div>
   </div>
