add in loading template

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -157,6 +157,11 @@
     </td>
 </template>
 
+<template name="ironTableLoading">
+    <div class="ironTableLoading">
+        {{>spinner}}
+    </div>
+</template>
 
 
 
