--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -13,7 +13,7 @@
         <span class="links">
             {{#if doDownloadLink}}
                 <button id="download-link" class="btn btn-primary btn-sm" 
-                    title="Download {{tableTitle}}" rel='tooltip' data-placement="bottom">
+                    title="Download CSV of {{tableTitle}}" rel='tooltip' data-placement="bottom">
                     <i class="fa fa-cloud-download fa-lg"></i> Download
                 </button>
             {{/if}}
