--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -1,5 +1,5 @@
 <template name="ironTable">
-    <div class="container iron-table-container">
+    <div class="iron-table-container">
         <h3>
             {{#if showBackButton}}
                 <a class="btn btn-link" onclick="window.history.back()">
