--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -9,6 +9,15 @@
   <div class="form-group">
     <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
     <div class="col-sm-10">
+      {{#if textArea}}
+        <textarea class="form-control hi" name="{{key}}" rows="5"
+          required="{{required}}"
+          autofocus="{{autofocus}}"
+          placeholder="{{placeholder}}"
+          title="{{tooltip}}" rel='tooltip' data-placement="right"
+          disabled="{{static}}"
+        >{{{value}}}</textarea>
+      {{else}}
         <input type="{{displayType}}" class="form-control hi" name="{{key}}"
           value="{{value}}"
           required="{{required}}"
@@ -17,6 +26,10 @@
           checked="{{checked}}"
           title="{{tooltip}}" rel='tooltip' data-placement="right"
           disabled="{{static}}" />
+      {{/if}}
+      {{#if helpText}}
+        <span class="help-block">{{helpText}}</span>
+      {{/if}}
     </div>
   </div>
 </template>
