--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -119,6 +119,9 @@
 
 <template name="ironTableHeader">
     <th class="{{column.class}}">
+        {{#if noSort}}
+            {{capitalize colName}} 
+        {{else}}
         <button class="btn btn-link table-col-head" 
             title="{{#if sort}}Reverse sort order{{else}}Sort on {{capitalize colName}}{{/if}}"
             rel='tooltip'>
@@ -127,6 +130,7 @@
                 <i class="fa fa-chevron-circle-{{#if desc}}down{{else}}up{{/if}}"></i>
             {{/if}}
         </button>
+        {{/if}}
     </th>
 </template>
 
