--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -23,6 +23,12 @@
                     href="{{pathFor newRecordPath}}">
                     {{newRecordTitle}} <i class="fa fa-plus-square fa-lg"></i> 
                 </a>
+            {{else}}
+                {{#if showNewButton}}
+                    <button id="iron-table-new-record" class="btn btn-success btn-sm" title="{{newRecordTooltip}}" rel='tooltip' data-placement="bottom">
+                    {{newRecordTitle}} <i class="fa fa-plus-square fa-lg"></i> 
+                    </button>
+                {{/if}}
             {{/if}}
         </span>
         {{#if showFilter}}
@@ -44,23 +50,12 @@
                 <table class="table table-striped table-hover table-condensed">
                     <thead>
                         <tr>
-                            {{#each headers}}
-                                {{#unless hide}}
-                                    {{> ironTableHeader}}
-                                {{/unless}}
-                            {{/each}}
-                            <th class="controls-header">
-
-                            </th>
+                            {{> ironTableHeaders}}
                         </tr>
                     </thead>
 
                     <tbody>
-                        {{#each records}}
-                            <tr>
-                                {{> ironTableRow}}
-                            </tr>
-                        {{/each}}
+                        {{> ironTableRecords}}
                     </tbody>
 
                 </table>
@@ -70,6 +65,25 @@
             {{/if}}
         {{/if}}
     </div>
+</template>
+
+<template name="ironTableHeaders">
+    {{#each headers}}
+        {{#unless hide}}
+            {{> ironTableHeader}}
+        {{/unless}}
+    {{/each}}
+    <th class="controls-header">
+
+    </th>
+</template>
+
+<template name="ironTableRecords">
+    {{#each records}}
+        <tr>
+            {{> ironTableRow}}
+        </tr>
+    {{/each}}
 </template>
 
 <template name="ironTableFilter">
@@ -105,17 +119,16 @@
 
     <div class="pull-right">
         <button id="previous" class="btn btn-default btn-sm {{previousPathClass}}"
-            title="previous record set" rel='tooltip'>
+            title="previous record set" rel='tooltip' data-placement="left">
             <i class="fa fa-chevron-left"></i>
         </button> 
         <button id="next" class="btn btn-default btn-sm {{nextPathClass}}"
-            title="next record set" rel='tooltip'>
+            title="next record set" rel='tooltip' data-placement="left">
             <i class="fa fa-chevron-right"></i>
         </button>
     </div>
-
-
 </template>
+
 
 <template name="ironTableHeader">
     <th class="{{column.class}}">
@@ -135,6 +148,7 @@
         {{/if}}
     </th>
 </template>
+
 
 <template name="ironTableRow">
     {{#each colData}}
@@ -170,6 +184,7 @@
         {{/if}}
     </td>
 </template>
+
 
 <template name="ironTableLoading">
     <div class="ironTableLoading">
