--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -15,8 +15,7 @@
           autofocus="{{autofocus}}"
           placeholder="{{placeholder}}"
           title="{{tooltip}}" rel='tooltip' data-placement="right"
-          disabled="{{static}}"
-        >{{{value}}}</textarea>
+          disabled="{{static}}">{{{value}}}</textarea>
       {{else}}
         <input type="{{displayType}}" class="form-control hi" name="{{key}}"
           value="{{value}}"
