add in non-modal add route

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -103,9 +103,9 @@
             </button>
         {{/if}}
 
-        {{#if newRecordPath}}
+        {{#if newRecordRoute}}
             <a class="btn btn-success btn-sm" title="{{newRecordTooltip}}" rel='tooltip' data-placement="bottom"
-                href="{{pathFor newRecordPath}}">
+                href="{{pathFor newRecordRoute}}">
                 {{newRecordTitle}} <i class="fa fa-plus-square fa-lg"></i> 
             </a>
         {{else}}
