--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -93,6 +93,9 @@
         {{/if}}
 
         {{{tableTitle}}}
+        {{#if subTitle}}
+          <small>{{{subTitle}}}</small>
+        {{/if}}
     </h3>
 
     <span class="links">
