--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -6,15 +6,19 @@
 </template>
 
 <template name="ironTableFormItem">
-  <div class="form-group">
-    <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
-    <div class="col-sm-10">
-      {{> UI.dynamic template=inputTemplate }}
-      {{#if helpText}}
-        <span class="help-block">{{helpText}}</span>
-      {{/if}}
+  {{#if hidden}}
+    <input type="hidden" name="{{key}}" value="{{value}}" />
+  {{else}}
+    <div class="form-group">
+      <label class="col-sm-2 control-label" for="{{key}}">{{header}}</label>
+      <div class="col-sm-10">
+        {{> UI.dynamic template=inputTemplate }}
+        {{#if helpText}}
+          <span class="help-block">{{helpText}}</span>
+        {{/if}}
+      </div>
     </div>
-  </div>
+  {{/if}}
 </template>
 
 
