--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -228,21 +228,48 @@
     </td>
   {{/each}}
   <td class="controls rowlink-skip">
+
+    {{#if showJSON}}
+      <button type="button" class="btn btn-link" 
+        style="white-space: nowrap;" 
+        rel="popover"
+        title="JSON"
+        data-container="body"
+        data-html=true
+        data-toggle="popover" 
+        data-placement="left" 
+        data-content="{{json}}"
+        data-template="{{ironPopupTemplate}}"
+        >
+        <i class="fa fa-code"></i>
+      </button>
+    {{/if}}
+
     {{#if extraControls}}{{> extraControls }}{{/if}}
+
     {{#if editOk}}
         <a href="{{editRoute}}" class="btn btn-link iron-table-edit-record"
           title='Edit Record' rel='tooltip'>
           <i class="fa fa-pencil-square-o"></i>
         </a>
     {{/if}}
+
     {{#if deleteOk}}
         <a class="btn btn-link iron-table-delete-record" title='Delete Record' rel='tooltip'>
             <i class="fa fa-trash-o"></i>
         </a>
     {{/if}}
+
   </td>
 </template>
 
+<template name="ironPopup">
+  <div class="popover iron-table-popover" role="tooltip">
+    <div class="arrow"></div>
+    <h3 class="popover-title"></h3>
+    <div class="popover-content"></div>
+  </div>
+</template>
 
 <template name="ironTableLoading">
     <div class="ironTableLoading">
