add in json popup

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -233,7 +233,7 @@
       <button type="button" class="btn btn-link" 
         style="white-space: nowrap;" 
         rel="popover"
-        title="JSON"
+        title="Record Object"
         data-container="body"
         data-html=true
         data-toggle="popover" 
@@ -241,7 +241,7 @@
         data-content="{{json}}"
         data-template="{{ironPopupTemplate}}"
         >
-        <i class="fa fa-code"></i>
+        <i class="fa fa-code" title="Show Record" rel="tooltip"></i>
       </button>
     {{/if}}
 
