class for table

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -1,6 +1,6 @@
 
 <template name="ironTable">
-    <div class="iron-table-container">
+    <div class="iron-table-container {{tableClass}}">
 
     {{#if inabox}}
       <div class="panel panel-default">
