--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -25,7 +25,7 @@
 <template name="ironTableFormInput">
   <input 
     type="{{displayType}}" 
-    class="form-control hi" 
+    class="form-control" 
     name="{{key}}"
     value="{{value}}"
     required="{{required}}"
@@ -33,8 +33,8 @@
     placeholder="{{placeholder}}"
     checked="{{checked}}"
     title="{{tooltip}}" 
-    rel='tooltip' 
-    data-placement="right"
+    rel='{{#if tooltip}}tooltip{{/if}}' 
+    data-placement="{{#if tooltip}}right{{/if}}"
     disabled="{{static}}" />
     {{#if static}}
     <input 
@@ -45,18 +45,45 @@
     {{/if}}
 </template>
 
+<template name="ironTableFormCheckbox">
+  <div class="checkbox">
+    <label>
+      <input 
+        class="iron-table-checkbox"
+        type="checkbox" 
+        name="{{key}}"
+        value="{{value}}"
+        required="{{required}}"
+        autofocus="{{autofocus}}"
+        placeholder="{{placeholder}}"
+        checked="{{checked}}"
+        title="{{tooltip}}" 
+        rel='{{#if tooltip}}tooltip{{/if}}' 
+        data-placement="{{#if tooltip}}right{{/if}}"
+        disabled="{{static}}" />
+        {{#if static}}
+        <input 
+          type="hidden" 
+          name="{{key}}"
+          value="{{value}}"
+        />
+        {{/if}}
+    </label>
+  </div>
+</template>
+
 
 <template name="ironTableFormTextarea">
   <textarea 
-    class="form-control hi" 
+    class="form-control" 
     name="{{key}}" 
     rows="5"
     required="{{required}}"
     autofocus="{{autofocus}}"
     placeholder="{{placeholder}}"
     title="{{tooltip}}" 
-    rel='tooltip' 
-    data-placement="right"
+    rel='{{#if tooltip}}tooltip{{/if}}'
+    data-placement="{{#if tooltip}}right{{/if}}"
     disabled="{{static}}">{{{value}}}</textarea>
 </template>
 
@@ -68,8 +95,9 @@
     required="{{required}}"
     autofocus="{{autofocus}}"
     placeholder="{{placeholder}}"
-    title="{{tooltip}}" rel='tooltip' 
-    data-placement="right"
+    title="{{tooltip}}" 
+    rel='{{#if tooltip}}tooltip{{/if}}'
+    data-placement="{{#if tooltip}}right{{/if}}"
     disabled="{{static}}" >
     {{> ironTableOptions}}
   </select>
