--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -24,7 +24,7 @@
 
             {{> ironTableNav}}
             <div class="clearfix"></div>
-            <div class="table-div">
+            <div class="table-responsive">
               <table class="table table-striped table-hover table-condensed">
                   <thead>
                       <tr>
@@ -65,7 +65,7 @@
 
                 {{> ironTableNav}}
                 <div class="clearfix"></div>
-                <div class="table-div">
+                <div class="table-responsive">
                   <table class="table table-striped table-hover table-condensed clearfix">
                       <thead>
                           <tr>
