display record count even when not pageing

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -189,6 +189,10 @@
             <i class="fa fa-chevron-right"></i>
         </button>
     </div>
+  {{else}}
+    <div class="iron-table-pager-display">
+      <strong>{{recordCount}} {{recordsName}}</strong>
+    </div>
   {{/if}}
 </template>
 
