do not allow edit on static

--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -24,7 +24,7 @@
 
 <template name="ironTableFormInput">
   {{#if static}}
-    <label class="form-control" disabled=true>
+    <label class="control-label" disabled=true>
       {{value}}
     </label>
   {{else}}
