allow hidden on static

--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -27,6 +27,9 @@
     <label class="control-label" disabled=true>
       {{value}}
     </label>
+    {{#if hidden}}
+      <input type="hidden" name="{{key}}" value="{{value}}"/>
+    {{/if}}
   {{else}}
     <input 
       type="{{displayType}}" 
