--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -164,7 +164,7 @@
                   </select>
               </div>
               <div class="form-group">
-                  <input type="text" id="filter-value" class="form-control"
+                  <input type="{{filterType}}" id="filter-value" class="form-control"
                       placeholder="Text to filter on" value="{{filterValue}}" />
               </div>
           </form>
