added boolean filter

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -165,7 +165,7 @@
               </div>
               <div class="form-group">
                   <input type="{{filterType}}" id="filter-value" class="form-control"
-                      placeholder="Text to filter on" value="{{filterValue}}" />
+                      placeholder="Text to filter on" value="{{filterValue}}" checked="{{checked}}" />
               </div>
           </form>
       </span>
