real value for hidden

--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -27,7 +27,7 @@
     <label class="control-label" disabled=true>
       {{value}}
     </label>
-    <input type="hidden" name="{{key}}" value="{{value}}" />
+    <input type="hidden" name="{{key}}" value="{{realValue}}" />
   {{else}}
     <input 
       type="{{displayType}}" 
